syntax = "proto2";

option go_package = "pkg/playstore/pb";

// Thanks to https://github.com/NoMore201/googleplay-api
// Both sha1 and sha256 are encoded with base64 with URL and Filename Safe Alphabet with padding removed
message AndroidAppDeliveryData {
  optional int64 downloadSize = 1;
  optional string sha1 = 2;
  optional string downloadUrl = 3;
  repeated AppFileMetadata additionalFile = 4;
  repeated HttpCookie downloadAuthCookie = 5;
  optional int64 refundTimeout = 7;
  optional bool serverInitiated = 8;
  optional int64 postInstallRefundWindowMillis = 9;
  optional bool immediateStartNeeded = 10;
  optional EncryptionParams encryptionParams = 12;
  optional string downloadUrlGzipped = 13;
  optional int64 downloadSizeGzipped = 14;
  repeated Split split = 15;
  optional string sha256 = 19;
}
message Split {
  optional string name = 1;
  optional int64 size = 2;
  optional int64 sizeGzipped = 3;
  optional string sha1 = 4;
  optional string downloadUrl = 5;
  optional string downloadUrlGzipped = 6;
  optional string sha256 = 9;
}
message AppFileMetadata {
  optional int32 fileType = 1;
  optional int32 versionCode = 2;
  optional int64 size = 3;
  optional string downloadUrl = 4;
  optional int64 sizeGzipped = 6;
  optional string downloadUrlGzipped = 7;
  optional string sha1 = 8;
}
message EncryptionParams {
  optional int32 version = 1;
  optional string encryptionKey = 2;
  optional string hmacKey = 3;
}
message HttpCookie {
  optional string name = 1;
  optional string value = 2;
}
message BrowseLink {
  optional string name = 1;
  optional string dataUrl = 3;
  optional Image icon = 5;
  optional UnknownCategoryContainer unknownCategoryContainer = 4;
}
message UnknownCategoryContainer {
  optional CategoryIdContainer categoryIdContainer = 5;
}
message CategoryIdContainer {
  optional string categoryId = 4;
}
message BrowseResponse {
  optional string contentsUrl = 1;
  optional string promoUrl = 2;
  repeated BrowseLink category = 3;
  repeated BrowseLink breadcrumb = 4;
  optional CategoryContainer categoryContainer = 9;
}
message CategoryContainer {
  repeated BrowseLink category = 4;
}
message BuyResponse {
  optional group CheckoutInfo = 2 {
    optional LineItem item = 3;
    repeated LineItem subItem = 4;
    repeated group CheckoutOption = 5 {
      optional string formOfPayment = 6;
      optional string encodedAdjustedCart = 7;
      repeated LineItem item = 16;
      repeated LineItem subItem = 17;
      optional LineItem total = 18;
      optional LineItem summary = 33;
      optional string purchaseCookie = 45;
      repeated string disabledReason = 48;
    }
  }
  optional string continueViaUrl = 8;
  optional string purchaseStatusUrl = 9;
  optional string checkoutServiceId = 12;
  optional bool checkoutTokenRequired = 13;
  optional string baseCheckoutUrl = 14;
  repeated string tosCheckboxHtml = 37;
  optional int32 iabPermissionError = 38;
  optional PurchaseStatusResponse purchaseStatusResponse = 39;
  optional string purchaseCookie = 46;
  optional string downloadToken = 55;
}
message LineItem {
  optional string name = 1;
  optional string description = 2;
  optional Offer offer = 3;
}
message PurchaseStatusResponse {
  optional int32 status = 1;
  optional string statusMsg = 2;
  optional string statusTitle = 3;
  optional string infoUrl = 5;
  optional AndroidAppDeliveryData appDeliveryData = 8;
}
message DeliveryResponse {
  optional AndroidAppDeliveryData appDeliveryData = 2;
}

message Docid {
  optional string backendDocid = 1;
  optional int32 type = 2;
  optional int32 backend = 3;
}
message Install {
  optional fixed64 androidId = 1;
  optional int32 version = 2;
  optional bool bundled = 3;
}
message Offer {
  optional int64 micros = 1;
  optional string currencyCode = 2;
  optional string formattedAmount = 3;
  repeated Offer convertedPrice = 4;
  optional bool checkoutFlowRequired = 5;
  optional int64 fullPriceMicros = 6;
  optional string formattedFullAmount = 7;
  optional int32 offerType = 8;
  optional int64 onSaleDate = 10;
  repeated string promotionLabel = 11;
  optional SubscriptionTerms subscriptionTerms = 12;
  optional string formattedName = 13;
  optional string formattedDescription = 14;
  optional bool sale = 22;
  optional string message = 26;
  optional int64 saleEndTimestamp = 30;
  optional string saleMessage = 31;
}
message SubscriptionTerms {
  optional TimePeriod recurringPeriod = 1;
  optional TimePeriod trialPeriod = 2;
}
message TimePeriod {
  optional int32 unit = 1;
  optional int32 count = 2;
}
message PasswordPrompt {
  optional string prompt = 1;
  optional string forgotPasswordUrl = 2;
}
message ContainerMetadata {
  optional string browseUrl = 1;
  optional string nextPageUrl = 2;
  optional double relevance = 3;
  optional int64 estimatedResults = 4;
  optional string analyticsCookie = 5;
  optional bool ordered = 6;
}

message DebugInfo {
  repeated string message = 1;
  repeated group Timing = 2 {
    optional string name = 3;
    optional double timeInMs = 4;
  }
}

message BulkDetailsEntry {
  optional DocV2 doc = 1;
}
message BulkDetailsRequest {
  repeated string docid = 1;
  optional bool includeChildDocs = 2;
}
message BulkDetailsResponse {
  repeated BulkDetailsEntry entry = 1;
}
message DetailsResponse {
  optional DocV1 docV1 = 1;
  optional DocV2 docV2 = 4;
  optional string detailsStreamUrl = 13;
  optional string postAcquireDetailsStreamUrl = 17;
}
message DeviceConfigurationProto {
  optional int32 touchScreen = 1;
  optional int32 keyboard = 2;
  optional int32 navigation = 3;
  optional int32 screenLayout = 4;
  optional bool hasHardKeyboard = 5;
  optional bool hasFiveWayNavigation = 6;
  optional int32 screenDensity = 7;
  optional int32 glEsVersion = 8;
  repeated string systemSharedLibrary = 9;
  repeated string systemAvailableFeature = 10;
  repeated string nativePlatform = 11;
  optional int32 screenWidth = 12;
  optional int32 screenHeight = 13;
  repeated string systemSupportedLocale = 14;
  repeated string glExtension = 15;
  optional int32 deviceClass = 16;
  optional int32 maxApkDownloadSizeMb = 17;
}
message Document {
  optional Docid docid = 1;
  optional Docid fetchDocid = 2;
  optional Docid sampleDocid = 3;
  optional string title = 4;
  optional string url = 5;
  repeated string snippet = 6;
  optional Offer priceDeprecated = 7;
  optional Availability availability = 9;
  repeated Image image = 10;
  repeated Document child = 11;
  optional AggregateRating aggregateRating = 13;
  repeated Offer offer = 14;
  repeated TranslatedText translatedSnippet = 15;
  repeated DocumentVariant documentVariant = 16;
  repeated string categoryId = 17;
  repeated Document decoration = 18;
  repeated Document parent = 19;
  optional string privacyPolicyUrl = 20;
}
message DocumentVariant {
  optional int32 variationType = 1;
  optional Rule rule = 2;
  optional string title = 3;
  repeated string snippet = 4;
  optional string recentChanges = 5;
  repeated TranslatedText autoTranslation = 6;
  repeated Offer offer = 7;
  optional int64 channelId = 9;
  repeated Document child = 10;
  repeated Document decoration = 11;
}
message Image {
  optional int32 imageType = 1;
  optional group Dimension = 2 {
    optional int32 width = 3;
    optional int32 height = 4;
  }
  optional string imageUrl = 5;
  optional string altTextLocalized = 6;
  optional string secureUrl = 7;
  optional int32 positionInSequence = 8;
  optional bool supportsFifeUrlOptions = 9;
  optional group Citation = 10 {
    optional string titleLocalized = 11;
    optional string url = 12;
  }
  optional string color = 15;
  optional int32 screenshotSetNumber = 21;
}
message TranslatedText {
  optional string text = 1;
  optional string sourceLocale = 2;
  optional string targetLocale = 3;
}
message AppDetails {
  optional string developerName = 1;
  optional int32 majorVersionNumber = 2;
  optional int32 versionCode = 3;
  optional string versionString = 4;
  optional string title = 5;
  optional int64 installationSize = 9;
  optional string developerWebsite = 12;
  optional string numDownloads = 13;
  optional string packageName = 14;
  optional string recentChangesHtml = 15;
  optional string uploadDate = 16;
  repeated FileMetadata file = 17;
  optional bool unstable = 21;
  optional bool hasInstantLink = 24;
  optional string containsAds = 30;
  optional TestingProgramInfo testingProgramInfo = 35;
  optional EarlyAccessInfo earlyAccessInfo = 36;
  optional string instantLink = 43;
  optional string developerAddress = 45;
}
message TestingProgramInfo {
  optional bool subscribed = 2;
  optional bool subscribed1 = 3;
  optional string testingProgramEmail = 5;
}
message EarlyAccessInfo {
  optional string email = 3;
}
message DocumentDetails {
  optional AppDetails appDetails = 1;
}
message FileMetadata {
  optional int32 fileType = 1;
  optional int32 versionCode = 2;
  optional int64 size = 3;
}
message ListResponse {
  repeated DocV2 doc = 2;
}
message DocV1 {
  optional Document finskyDoc = 1;
  optional string docid = 2;
  optional string detailsUrl = 3;
  optional string reviewsUrl = 4;
  optional string relatedListUrl = 5;
  optional string moreByListUrl = 6;
  optional string shareUrl = 7;
  optional string creator = 8;
  optional DocumentDetails details = 9;
  optional string descriptionHtml = 10;
  optional string relatedBrowseUrl = 11;
  optional string moreByBrowseUrl = 12;
  optional string relatedHeader = 13;
  optional string moreByHeader = 14;
  optional string title = 15;
  optional string warningMessage = 17;
}

message DocV2 {
  optional string docid = 1;
  optional string backendDocid = 2;
  optional int32 docType = 3;
  optional int32 backendId = 4;
  optional string title = 5;
  optional string creator = 6;
  optional string descriptionHtml = 7;
  repeated Offer offer = 8;
  optional Availability availability = 9;
  repeated Image image = 10;
  repeated DocV2 child = 11;
  optional ContainerMetadata containerMetadata = 12;
  optional DocumentDetails details = 13;
  optional string detailsUrl = 16;
  optional string shareUrl = 17;
  optional string reviewsUrl = 18;
  optional string backendUrl = 19;
  optional string purchaseDetailsUrl = 20;
  optional bool detailsReusable = 21;
  optional string subtitle = 22;
  optional string descriptionShort = 27;
  optional string reviewSnippetsUrl = 31;
  optional string reviewQuestionsUrl = 34;
}
message Availability {
  optional int32 restriction = 5;
  optional int32 offerType = 6;
  optional Rule rule = 7;
  repeated group PerDeviceAvailabilityRestriction = 9 {
    optional fixed64 androidId = 10;
    optional int32 deviceRestriction = 11;
    optional int64 channelId = 12;
  }
  optional bool availableIfOwned = 13;
  repeated Install install = 14;
}
message Rule {
  optional bool negate = 1;
  optional int32 operator = 2;
  optional int32 key = 3;
  repeated string stringArg = 4;
  repeated int64 longArg = 5;
  repeated double doubleArg = 6;
  repeated Rule subrule = 7;
  optional int32 responseCode = 8;
  optional string comment = 9;
  repeated fixed64 stringArgHash = 10;
  repeated int32 constArg = 11;
}

message AggregateRating {
  optional int32 type = 1;
  optional float starRating = 2;
  optional uint64 ratingsCount = 3;
  optional uint64 oneStarRatings = 4;
  optional uint64 twoStarRatings = 5;
  optional uint64 threeStarRatings = 6;
  optional uint64 fourStarRatings = 7;
  optional uint64 fiveStarRatings = 8;
  optional uint64 thumbsUpCount = 9;
  optional uint64 thumbsDownCount = 10;
  optional uint64 commentCount = 11;
  optional double bayesianMeanRating = 12;
}

message Payload {
  optional ListResponse listResponse = 1;
  optional DetailsResponse detailsResponse = 2;
  optional BuyResponse buyResponse = 4;
  optional SearchResponse searchResponse = 5;
  optional BrowseResponse browseResponse = 7;
  optional PurchaseStatusResponse purchaseStatusResponse = 8;
  optional BulkDetailsResponse bulkDetailsResponse = 19;
  optional DeliveryResponse deliveryResponse = 21;
  optional AndroidCheckinResponse androidCheckinResponse = 26;
  optional UploadDeviceConfigResponse uploadDeviceConfigResponse = 28;
  optional SearchSuggestResponse searchSuggestResponse = 40;
  optional TestingProgramResponse testingProgramResponse = 80;
}
message ServerMetadata {
  optional int64 latencyMillis = 1;
}

message ServerCookie {
  optional int32 type = 1;
  optional bytes token = 2;
}
message ServerCookies {
  repeated ServerCookie serverCookie = 1;
}
message ResponseWrapper {
  optional Payload payload = 1;
  optional ServerCommands commands = 2;
  optional ServerMetadata serverMetadata = 5;
  optional ServerCookies serverCookies = 7;
  optional bytes serverLogsCookie = 9;
}
message ServerCommands {
  optional string displayErrorMessage = 2;
}

message RelatedSearch {
  optional string searchUrl = 1;
  optional string header = 2;
  optional int32 backendId = 3;
  optional int32 docType = 4;
  optional bool current = 5;
}
message SearchResponse {
  optional string originalQuery = 1;
  optional string suggestedQuery = 2;
  optional bool aggregateQuery = 3;
  repeated DocV2 doc = 5;
  repeated RelatedSearch relatedSearch = 6;
  optional string nextPageUrl = 10;
}
message SearchSuggestResponse {
  repeated SearchSuggestEntry entry = 1;
}
message SearchSuggestEntry {
  optional int32 type = 1;
  optional string suggestedQuery = 2;
  optional ImageContainer imageContainer = 5;
  message ImageContainer {
    optional string imageUrl = 5;
  }
  optional string title = 6;
  optional PackageNameContainer packageNameContainer = 8;
  message PackageNameContainer {
    optional string packageName = 1;
  }
}
message TestingProgramResponse {
  optional TestingProgramResult result = 2;
}
message TestingProgramResult {
  optional TestingProgramDetails details = 4;
}
message TestingProgramDetails {
  optional bool flag1 = 2;
  optional int64 id = 3;
  optional bool unsubscribed = 4;
}

message UploadDeviceConfigRequest {
  optional DeviceConfigurationProto deviceConfiguration = 1;
  optional string manufacturer = 2;
  optional string gcmRegistrationId = 3;
}
message UploadDeviceConfigResponse {
  optional string uploadDeviceConfigToken = 1;
}
message AndroidCheckinRequest {
  optional string imei = 1;
  optional uint64 id = 2;
  optional string digest = 3;
  optional AndroidCheckinProto checkin = 4;
  optional string desiredBuild = 5;
  optional string locale = 6;
  optional int64 loggingId = 7;
  optional string marketCheckin = 8;
  repeated string macAddr = 9;
  optional string meid = 10;
  repeated string accountCookie = 11;
  optional string timeZone = 12;
  optional fixed64 securityToken = 13;
  optional int32 version = 14;
  repeated string otaCert = 15;
  optional string serialNumber = 16;
  optional string esn = 17;
  optional DeviceConfigurationProto deviceConfiguration = 18;
  repeated string macAddrType = 19;
  optional int32 fragment = 20;
  optional string userName = 21;
  optional int32 userSerialNumber = 22;
}
message AndroidCheckinResponse {
  optional bool statsOk = 1;
  optional int64 timeMsec = 3;
  optional string digest = 4;
  optional fixed64 androidId = 7;
  optional fixed64 securityToken = 8;
  optional string deviceCheckinConsistencyToken = 12;
}
message AndroidBuildProto {
  optional string id = 1;
  optional string product = 2;
  optional string carrier = 3;
  optional string radio = 4;
  optional string bootloader = 5;
  optional string client = 6;
  optional int64 timestamp = 7;
  optional int32 googleServices = 8;
  optional string device = 9;
  optional int32 sdkVersion = 10;
  optional string model = 11;
  optional string manufacturer = 12;
  optional string buildProduct = 13;
  optional bool otaInstalled = 14;
}
message AndroidCheckinProto {
  optional AndroidBuildProto build = 1;
  optional int64 lastCheckinMsec = 2;
  optional string cellOperator = 6;
  optional string simOperator = 7;
  optional string roaming = 8;
  optional int32 userNumber = 9;
}
